Update result representation

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Qos Analyzer</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-debug.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/survey-knockout/survey.css" />
+    <link rel="stylesheet" href="./bootstrap.min.css" />
+    <script type="text/javascript" src="./jquery.min.js"></script>
+    <script src="./bootstrap.min.js"></script>
+    <script src="./knockout-debug.js"></script>
+    <link rel="stylesheet" href="./survey.css" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./ii.css" />
 
