--- a/public/results.html
+++ b/public/results.html
@@ -4,32 +4,42 @@
 <head>
     <meta charset="utf-8" />
     <title>Survey Results</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-debug.js"></script>
-    <script src="https://unpkg.com/survey-knockout"></script>
-    <link rel="stylesheet" href="https://unpkg.com/survey-knockout/survey.css" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
+    <link rel="stylesheet" href="./bootstrap.min.css" />
+    <script type="text/javascript" src="./jquery.min.js"></script>
+    <script type="text/javascript" src="./jquery.dataTables.min.js"></script>
+    <script src=".//bootstrap.min.js"></script>
+    <script src="./knockout-debug.js"></script>
+    <script src="./survey.ko.js"></script>
+    <link rel="stylesheet" href="./survey.css" />
+    <link rel="stylesheet" href="./jquery.dataTables.min.css" />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="./font-awesome.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+<link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
-    <a class="fork_me_on_github" href="https://github.com/surveyjs/surveyjs-nodejs" target="_blank">
-        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67"
-            alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png">
-    </a>
+      <!-- Navbar -->
+  <div class="w3-top">
+    <div class="w3-bar w3-white w3-card w3-left-align w3-large">
+      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = '/'">На главную</a>
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">Личный кабинет</a>
+    </div>
+  </div>
     <div class="survey-page-header">
         <div class="sv_main survey-page-header-content">
-            <button onclick="window.location = '/'">&lt&nbspBack</button>
+            <button class="closeSurveyResult">Закрыть</button>
         </div>
     </div>
     <div class="sv_main sv_frame sv_default_css">
         <div class="sv_custom_header"></div>
         <div class="sv_container">
             <div class="sv_header">
-                <h3 data-bind="text: surveyId + ' results'"></h3>
+                <h3 data-bind="text: surveyId + '. Результаты'"></h3>
             </div>
             <div class="sv_body">
                 <table id="resultsTable" class="table table-striped table-bordered">
