--- a/public/survey.html
+++ b/public/survey.html
@@ -3,39 +3,13 @@
 
 <head>
     <title>QoS-Analyzer</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
-    <script src="https://unpkg.com/survey-knockout"></script>
-    <link rel="stylesheet" href="https://unpkg.com/survey-knockout/survey.css" />
+    <script src="./knockout-min.js"></script>
+    <script src="./survey.ko.js"></script>
+    <link rel="stylesheet" href="./survey.css" />
     <link rel="stylesheet" href="./index.css" />
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+<link rel="stylesheet" href="./w3.css">
+<link rel="stylesheet" href="./font-awesome.min.css">
 <link rel="stylesheet" href="./index.css">
-<style>
-  body,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-family: "Lato", sans-serif
-  }
-  
-  .w3-bar,
-  h1,
-  button {
-    font-family: "Montserrat", sans-serif
-  }
-  
-  .fa-anchor,
-  .fa-coffee {
-    font-size: 200px
-  }
-</style>
-
 <body>
 
   <!-- Navbar -->
