Fixed saving of servqual

--- a/public/results.html
+++ b/public/results.html
@@ -2,53 +2,55 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Survey Results</title>
-    <link rel="stylesheet" href="./bootstrap.min.css" />
+    <link rel="stylesheet" href="./bootstrap.min.css"/>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./jquery.dataTables.min.js"></script>
     <script src=".//bootstrap.min.js"></script>
     <script src="./knockout-debug.js"></script>
     <script src="./survey.ko.js"></script>
-    <link rel="stylesheet" href="./survey.css" />
-    <link rel="stylesheet" href="./jquery.dataTables.min.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./survey.css"/>
+    <link rel="stylesheet" href="./jquery.dataTables.min.css"/>
+    <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="./font-awesome.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
-<link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="./font-awesome.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
-      <!-- Navbar -->
-  <div class="w3-top">
+<!-- Navbar -->
+<div class="w3-top">
     <div class="w3-bar w3-white w3-card w3-left-align w3-large">
-      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = '/'">На главную</a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">Личный кабинет</a>
+        <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white"
+           href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i
+                class="fa fa-bars"></i></a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = '/'">На
+            главную</a>
+        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">Личный кабинет</a>
+        <button class="closeSurveyResult">Закрыть</button>
     </div>
-  </div>
-    <div class="survey-page-header">
-        <div class="sv_main survey-page-header-content">
-            <button class="closeSurveyResult">Закрыть</button>
+</div>
+<br/>
+<br/>
+<br/>
+<div class="sv_main sv_frame sv_default_css">
+    <div class="sv_custom_header"></div>
+    <div class="sv_container">
+        <div class="sv_header">
+            <h3 data-bind="text: surveyId + '. Результаты'"></h3>
+        </div>
+        <div class="sv_body">
+            <table id="resultsTable" class="table table-striped table-bordered">
+            </table>
         </div>
     </div>
-    <div class="sv_main sv_frame sv_default_css">
-        <div class="sv_custom_header"></div>
-        <div class="sv_container">
-            <div class="sv_header">
-                <h3 data-bind="text: surveyId + '. Результаты'"></h3>
-            </div>
-            <div class="sv_body">
-                <table id="resultsTable" class="table table-striped table-bordered">
-                </table>
-            </div>
-        </div>
-    </div>
+</div>
 
-    <script src="./results.js"></script>
+<script src="./results.js"></script>
 </body>
 
 </html>
