--- a/public/results.html
+++ b/public/results.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./bootstrap.min.css"/>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./jquery.dataTables.min.js"></script>
-    <script src=".//bootstrap.min.js"></script>
+    <script src="./bootstrap.min.js"></script>
     <script src="./knockout-debug.js"></script>
     <script src="./survey.ko.js"></script>
     <link rel="stylesheet" href="./survey.css"/>
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="./font-awesome.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
     <link rel="stylesheet" href="./index.css">
 </head>
 
