--- a/public/admin.html
+++ b/public/admin.html
@@ -37,8 +37,9 @@
 </div>
 <br/><br/><br/>
 <div class="container">
-    <canvas id="myChart"></canvas>
-    <canvas id="myPieChart"></canvas>
+    <canvas id="lineChart"></canvas>
+    <canvas id="ageChart"></canvas>
+    <canvas id="locationChart"></canvas>
 </div>
 <script type="text/javascript" src="./index.js"></script>
 <script type="text/javascript" src="./chrt.js"></script>
