--- a/public/survey.html
+++ b/public/survey.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>QoS-Analyzer</title>
+    <script type="text/javascript" src="./user.js"></script>
     <script src="./knockout-min.js"></script>
     <script src="./survey.ko.js"></script>
     <link rel="stylesheet" href="./survey.css" />
@@ -27,6 +28,7 @@
     </div>
     <div id="surveyElement">
     </div>
+  <script type="text/javascript" src="./user.js"></script>
     <script src="./survey.js"></script>
 </body>
 
