--- a/public/admin.html
+++ b/public/admin.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8"/>
     <title>Панель администратора</title>
     <link rel="stylesheet" href="./bootstrap.min.css"/>
+    <script type="text/javascript" src="./user.js"></script>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./jquery.dataTables.min.js"></script>
     <script src="./bootstrap.min.js"></script>
