--- a/public/editor.html
+++ b/public/editor.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Редактор</title>
+    <script type="text/javascript" src="./user.js"></script>
     <script src="./ace.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="./worker-json.js" type="text/javascript" charset="utf-8"></script>
     <script src="./mode-json.js" type="text/javascript" charset="utf-8"></script>
@@ -51,7 +52,6 @@
             </div>
         </div>
     </div>
-
     <script src="./editor.js"></script>
 </body>
 
