--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Qos Analyzer</title>
     <link rel="stylesheet" href="./bootstrap.min.css" />
+    <script type="text/javascript" src="./user.js"></script>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script src="./bootstrap.min.js"></script>
     <script src="./knockout-debug.js"></script>
@@ -35,9 +36,9 @@
                                 <td>
                                     <a class="sv_button_link" data-bind="attr: { href: 'survey.html?id=' + ko.unwrap(id) }">Пройти опрос</a>
                                     <a class="sv_button_link" data-bind="attr: { href: 'editor.html?id=' + ko.unwrap(id)+'&name='+ko.unwrap(name) }">Редактировать</a>
-                                    <a class="sv_button_link" data-bind="attr: { href: 'results.html?id=' + ko.unwrap(id) }">Результаты</a>
-                                    <a class="sv_button_link" data-bind="attr: { href: 'admin.html?id=' + ko.unwrap(id) }">Servqual</a>
-                                    <span class="sv_button_link sv_button_delete" data-bind="click: function() { $parent.deleteSurvey(ko.unwrap(id), $parent.loadSurveys); }">Удалить</span>
+                                    <a class="sv_button_link" data-bind="visible: $parent.isAdmin(),attr: { href: 'results.html?id=' + ko.unwrap(id) }">Результаты</a>
+                                    <a class="sv_button_link" data-bind="visible: $parent.isAdmin(),attr: { href: 'admin.html?id=' + ko.unwrap(id) }">Servqual</a>
+                                    <span class="sv_button_link sv_button_delete" data-bind="visible: $parent.isAdmin(),click: function() { $parent.deleteSurvey(ko.unwrap(id), $parent.loadSurveys); }">Удалить</span>
                                 </td>
                             </tr>
                             <!-- /ko -->
@@ -48,7 +49,6 @@
         </div>
     </div>
 </body>
-
 <script src="index.js"></script>
 
 </html>
