--- a/public/results.html
+++ b/public/results.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <title>Результаты опросов</title>
     <link rel="stylesheet" href="./bootstrap.min.css"/>
+    <script type="text/javascript" src="./user.js"></script>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./jquery.dataTables.min.js"></script>
     <script src="./bootstrap.min.js"></script>
@@ -48,7 +49,7 @@
         </div>
     </div>
 </div>
-
+<script type="text/javascript" src="./user.js"></script>
 <script src="./results.js"></script>
 </body>
 
