--- a/public/admin.html
+++ b/public/admin.html
@@ -7,7 +7,7 @@
 <title>Matrix with multiple choices for every column - Matrix Dropdown question, jQuery Survey Library Example</title>
 <head>
     <meta charset="utf-8"/>
-    <title>Survey Results</title>
+    <title>Панель администратора</title>
     <link rel="stylesheet" href="./bootstrap.min.css"/>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./jquery.dataTables.min.js"></script>
@@ -36,10 +36,22 @@
     </div>
 </div>
 <br/><br/><br/>
-<div class="container">
+<div class="admin-container">
+    <div class="chart-container">
+    <h3>Качество услуги, расчитанное по методике SERVQUAL</h3>
     <canvas id="lineChart"></canvas>
+    </div>
+    <div class="chart-container">
+    <h3>Соотношение пользователей, прошедших опрос, по возрасту</h3>
     <canvas id="ageChart"></canvas>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="chart-container">
+    <h3>Соотношение пользователей, прошедших опрос, по областям</h3>
     <canvas id="locationChart"></canvas>
+    </div>
 </div>
 <script type="text/javascript" src="./index.js"></script>
 <script type="text/javascript" src="./chrt.js"></script>
