--- a/public/results.html
+++ b/public/results.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>Survey Results</title>
+    <title>Результаты опросов</title>
     <link rel="stylesheet" href="./bootstrap.min.css"/>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./jquery.dataTables.min.js"></script>
