--- a/public/editor.html
+++ b/public/editor.html
@@ -18,10 +18,18 @@
 
     <script src="./survey.editor.js"></script>
     <link rel="stylesheet" href="./surveyeditor.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./w3.css">
+    <link rel="stylesheet" href="./font-awesome.min.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
+<div class="w3-top">
+    <div class="w3-bar w3-white w3-card w3-left-align w3-large">
+        <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = ''">Выйти</a>
+    </div>
+</div>
     <div class="survey-page-header">
         <div class="sv_main survey-page-header-content">
             <button onclick="window.location = '/'">&lt&nbspНазад</button>
