--- a/public/results.html
+++ b/public/results.html
@@ -15,8 +15,6 @@
     <link rel="stylesheet" href="./jquery.dataTables.min.css"/>
     <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="./font-awesome.min.css">
     <link rel="stylesheet" href="./index.css">
 </head>
@@ -25,13 +23,8 @@
 <!-- Navbar -->
 <div class="w3-top">
     <div class="w3-bar w3-white w3-card w3-left-align w3-large">
-        <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white"
-           href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i
-                class="fa fa-bars"></i></a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = '/'">На
-            главную</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">Личный кабинет</a>
-        <button class="closeSurveyResult">Закрыть</button>
+        <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = ''">Выйти</a>
     </div>
 </div>
 <br/>
@@ -49,7 +42,6 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="./user.js"></script>
 <script src="./results.js"></script>
 </body>
 
