--- a/public/survey.html
+++ b/public/survey.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>QoS-Analyzer</title>
-    <script type="text/javascript" src="./user.js"></script>
     <script src="./knockout-min.js"></script>
     <script src="./survey.ko.js"></script>
-    <link rel="stylesheet" href="./survey.css" />
-    <link rel="stylesheet" href="./index.css" />
-<link rel="stylesheet" href="./w3.css">
-<link rel="stylesheet" href="./font-awesome.min.css">
-<link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./survey.css"/>
+    <link rel="stylesheet" href="./index.css"/>
+    <link rel="stylesheet" href="./w3.css">
+    <link rel="stylesheet" href="./font-awesome.min.css">
+    <link rel="stylesheet" href="./index.css">
 <body>
-
-  <!-- Navbar -->
-  <div class="w3-top">
+<div class="w3-top">
     <div class="w3-bar w3-white w3-card w3-left-align w3-large">
-      <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = '/'">На главную</a>
-      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-grey">Личный кабинет</a>
-    </div>
-  </div>
+        <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white"
+           href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i
+                class="fa fa-bars"></i></a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = '/'" style="float: left">&lt&nbspНазад</a>
 
-    <div class="survey-page-header">    
-        <div class="sv_main survey-page-header-content">
-        </div>
     </div>
-    <div id="surveyElement">
+</div>
+<div class="survey-page-header">
+    <div class="sv_main survey-page-header-content">
     </div>
-  <script type="text/javascript" src="./user.js"></script>
-    <script src="./survey.js"></script>
+</div>
+<div id="surveyElement">
+</div>
+<script src="./survey.js"></script>
 </body>
-
 </html>
