--- a/public/editor.html
+++ b/public/editor.html
@@ -27,12 +27,13 @@
 <div class="w3-top">
     <div class="w3-bar w3-white w3-card w3-left-align w3-large">
         <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = 'admin.html'" style="float: left;">&lt&nbspНазад</a>
+
         <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="logout()">Выйти</a>
     </div>
 </div>
     <div class="survey-page-header">
         <div class="sv_main survey-page-header-content">
-            <button onclick="window.location = '/'">&lt&nbspНазад</button>
         </div>
     </div>
     <div class="sv_main sv_frame sv_default_css">
