--- a/public/login.html
+++ b/public/login.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./login.js"></script>
+    <script type="text/javascript" src="./jquery.min.js"></script>
     <style>
         body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -132,13 +132,15 @@
     <form class="modal-content animate">
 
         <div class="container">
+
             <label for="name"><b>Имя пользователя</b></label>
             <input type="text" placeholder="Введите имя" id="name" required>
 
             <label for="pswrd"><b>Пароль</b></label>
             <input type="password" placeholder="Введите пароль" id="pswrd" required>
-
             <button type="submit" onclick="login()">Войти</button>
+            <button type="submit" onclick="window.location = 'index.html'">На главную</button>
+
         </div>
     </form>
 </div>
