--- a/public/results.html
+++ b/public/results.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8"/>
     <title>Результаты опросов</title>
-    <link rel="stylesheet" href="./bootstrap.min.css"/>
     <script type="text/javascript" src="./user.js"></script>
+    <link rel="stylesheet" href="./bootstrap.min.css"/>
     <script type="text/javascript" src="./jquery.min.js"></script>
     <script type="text/javascript" src="./jquery.dataTables.min.js"></script>
     <script src="./bootstrap.min.js"></script>
@@ -25,6 +25,8 @@
     <div class="w3-bar w3-white w3-card w3-left-align w3-large">
         <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-white" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="logout()">Выйти</a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white" onclick="window.location = 'admin.html'" style="float: left">&lt&nbspНазад</a>
+        <button class="closeSurveyResult">Закрыть</button>
     </div>
 </div>
 <br/>
